--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 	<main class="wrapper">
-		<section class="main__block main">
+		<section class="main__block">
 			<header class="header">
 				<div class="header__main container">
 					<div class="header__main-inner">
@@ -68,6 +68,32 @@
 				</ul>
 			</nav>
 		</aside>
+		<section class="second-block">
+			<div class="container">
+				<div class="second-block__heading">
+					<p class="heading-text">Мы лучшие</p>
+				</div>
+				<div class="second-block__features">
+					<ul class="features__list">
+						<li class="features__item">
+							<img src="img/icons/meat.svg" alt="свежее мясо" class="features__item-pic">
+							<span class="features__item-heading">100% свежее мясо</span>
+							<span class="features__item-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti numquam dolor odit nemo ipsa a est amet, impedit, delectus similique eaque earum dolorum modi illum!</span>
+						</li>
+						<li class="features__item">
+							<img src="img/icons/hand.svg" alt="ручная сборка" class="features__item-pic">
+							<span class="features__item-heading">Ручная сборка</span>
+							<span class="features__item-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti numquam dolor odit nemo ipsa a est amet, impedit, delectus similique eaque earum dolorum modi illum!</span>
+						</li>
+						<li class="features__item">
+							<img src="img/icons/natural.svg" class="features__item-pic" alt="натуральные ингридиенты">
+							<span class="features__item-heading">Натуральные ингридиенты</span>
+							<span class="features__item-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti numquam dolor odit nemo ipsa a est amet.</span>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</section>
 	</main>
 </body>
 </html>
