--- a/index.html
+++ b/index.html
@@ -78,17 +78,17 @@
 						<li class="features__item">
 							<img src="img/icons/meat.svg" alt="свежее мясо" class="features__item-pic">
 							<span class="features__item-heading">100% свежее мясо</span>
-							<span class="features__item-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti numquam dolor odit nemo ipsa a est amet, impedit, delectus similique eaque earum dolorum modi illum!</span>
+							<div class="features__item-text"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti numquam dolor odit nemo ipsa a est amet, impedit, delectus similique eaque earum dolorum modi illum!</p></div>
 						</li>
 						<li class="features__item">
 							<img src="img/icons/hand.svg" alt="ручная сборка" class="features__item-pic">
 							<span class="features__item-heading">Ручная сборка</span>
-							<span class="features__item-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti numquam dolor odit nemo ipsa a est amet, impedit, delectus similique eaque earum dolorum modi illum!</span>
+							<div class="features__item-text"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti numquam dolor odit nemo ipsa a est amet, impedit, delectus similique eaque earum dolorum modi illum!</p></div>
 						</li>
 						<li class="features__item">
 							<img src="img/icons/natural.svg" class="features__item-pic" alt="натуральные ингридиенты">
 							<span class="features__item-heading">Натуральные ингридиенты</span>
-							<span class="features__item-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti numquam dolor odit nemo ipsa a est amet.</span>
+							<div class="features__item-text"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti numquam dolor odit nemo ipsa a est amet.</p></div>
 						</li>
 					</ul>
 				</div>
