--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 	<main class="wrapper">
-		<section class="main__block">
+		<section class="main__block section">
 			<header class="header">
 				<div class="header__main container">
 					<div class="header__main-inner">
@@ -68,12 +68,12 @@
 				</ul>
 			</nav>
 		</aside>
-		<section class="second-block">
+		<section class="we_best__block section">
 			<div class="container">
-				<div class="second-block__heading">
+				<div class="we_best__block__heading">
 					<p class="heading-text">Мы лучшие</p>
 				</div>
-				<div class="second-block__features">
+				<div class="we_best__block__features">
 					<ul class="features__list">
 						<li class="features__item">
 							<img src="img/icons/meat.svg" alt="свежее мясо" class="features__item-pic">
@@ -93,6 +93,108 @@
 					</ul>
 				</div>
 			</div>
+		</section>
+		<section class="reviews section">
+			
+				<ul class="reviews__list">
+					<li class="reviews__item">
+						<div class="reviews__item__inner">
+							<img src="img/reviews/photo_1.jpg" class="reviews__item__inner-pic"  alt="">
+						</div>
+						<div class="reviews__content">
+							<h4 class="reviews__content-name">Константин Спилберг</h4>
+							<span class="reviews__content-text">
+								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, delectus molestiae, unde quaerat autem velit ullam dolor, dolores esse error praesentium aut culpa! </p>
+							</span>
+							<button class="reviews__content-btn">Подробнее</button>
+						</div>
+					</li>
+					<li class="reviews__item">
+						<div class="reviews__item__inner">
+							<img src="img/reviews/photo_2.jpg" class="reviews__item__inner-pic" alt="">
+						</div>
+						<div class="reviews__content">
+							<h4 class="reviews__content-name">Константин Спилберг</h4>
+							<span class="reviews__content-text">
+								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, delectus molestiae, unde quaerat autem velit ullam dolor, dolores esse error praesentium aut culpa! </p>
+							</span>
+							<button class="reviews__content-btn">Подробнее</button>
+						</div>
+					</li>
+					<li class="reviews__item">
+						<div class="reviews__item__inner">
+							<img src="img/reviews/photo_3.jpg" class="reviews__item__inner-pic" alt="">
+						</div>
+						<div class="reviews__content">
+							<h4 class="reviews__content-name">Константин Спилберг</h4>
+							<span class="reviews__content-text">
+								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, delectus molestiae, unde quaerat autem velit ullam dolor, dolores esse error praesentium aut culpa.</p>
+							</span>
+							<button class="reviews__content-btn">Подробнее</button>
+						</div>
+					</li>
+					<li class="reviews__item">
+						<div class="reviews__item__inner">
+							<img src="img/reviews/photo_4.jpg" class="reviews__item__inner-pic" alt="">
+						</div>
+						<div class="reviews__content">
+							<h4 class="reviews__content-name">Константин Спилберг</h4>
+							<span class="reviews__content-text">
+								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, delectus molestiae, unde quaerat autem velit ullam dolor, dolores esse error praesentium aut culpa! </p>
+							</span>
+							<button class="reviews__content-btn">Подробнее</button>
+						</div>
+					</li>
+					<li class="reviews__item">
+						<div class="reviews__item__inner">
+							<img src="img/reviews/photo_5.jpg" class="reviews__item__inner-pic" alt="">
+						</div>
+						<div class="reviews__content">
+							<h4 class="reviews__content-name">Константин Спилберг</h4>
+							<span class="reviews__content-text">
+								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, delectus molestiae, unde quaerat autem velit ullam dolor, dolores esse error praesentium aut culpa! </p>
+							</span>
+							<button class="reviews__content-btn">Подробнее</button>
+						</div>
+					</li>
+					<li class="reviews__item">
+						<div class="reviews__item__inner">
+							<img src="img/reviews/photo_6.jpg" class="reviews__item__inner-pic" alt="">
+						</div>
+						<div class="reviews__content">
+							<h4 class="reviews__content-name">Константин Спилберг</h4>
+							<span class="reviews__content-text">
+								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, delectus molestiae, unde quaerat autem velit ullam dolor, dolores esse error praesentium aut culpa! </p>
+							</span>
+							<button class="reviews__content-btn">Подробнее</button>
+						</div>
+					</li>
+					<li class="reviews__item">
+						<div class="reviews__item__inner">
+							<img src="img/reviews/photo_7.jpg" class="reviews__item__inner-pic" alt="">
+						</div>
+						<div class="reviews__content">
+							<h4 class="reviews__content-name">Константин Спилберг</h4>
+							<span class="reviews__content-text">
+								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, delectus molestiae, unde quaerat autem velit ullam dolor, dolores esse error praesentium aut culpa! </p>
+							</span>
+							<button class="reviews__content-btn">Подробнее</button>
+						</div>
+					</li>
+					<li class="reviews__item">
+						<div class="reviews__item__inner">
+							<img src="img/reviews/photo_8.jpg" class="reviews__item__inner-pic" alt="">
+						</div>
+						<div class="reviews__content">
+							<h4 class="reviews__content-name">Константин Спилберг</h4>
+							<span class="reviews__content-text">
+								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, delectus molestiae, unde quaerat autem velit ullam dolor, dolores esse error praesentium aut culpa! </p>
+							</span>
+							<button class="reviews__content-btn">Подробнее</button>
+						</div>
+					</li>
+				</ul>
+			
 		</section>
 	</main>
 </body>
