--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 							<div class="main__burder-pic__2"></div>
 						</div>
 						<div class="main__burger-text">
-							<span class="main__burger-text-1st">Мы делаем</span> <br>
-							<span class="main__burger-text-2nd">Натуральные <br> бургеры</span>
+							<h1 class="main__burger-text-1st">Мы делаем</h1> 
+							<div class="main__burger-text-2nd">Натуральные бургеры</div>
 						</div>
 					</div>
 				</div>
@@ -71,22 +71,22 @@
 		<section class="we_best__block section">
 			<div class="container">
 				<div class="we_best__block__heading">
-					<p class="heading-text">Мы лучшие</p>
+					<h1 class="heading-text">Мы лучшие</h1>
 				</div>
 				<div class="we_best__block__features">
 					<ul class="features__list">
 						<li class="features__item">
-							<img src="img/icons/meat.svg" alt="свежее мясо" class="features__item-pic">
+							<div class="features__item-pic features__item-pic_meat"></div>
 							<span class="features__item-heading">100% свежее мясо</span>
 							<div class="features__item-text"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti numquam dolor odit nemo ipsa a est amet, impedit, delectus similique eaque earum dolorum modi illum!</p></div>
 						</li>
 						<li class="features__item">
-							<img src="img/icons/hand.svg" alt="ручная сборка" class="features__item-pic">
+							<div class="features__item-pic features__item-pic_hand"></div>
 							<span class="features__item-heading">Ручная сборка</span>
 							<div class="features__item-text"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti numquam dolor odit nemo ipsa a est amet, impedit, delectus similique eaque earum dolorum modi illum!</p></div>
 						</li>
 						<li class="features__item">
-							<img src="img/icons/natural.svg" class="features__item-pic" alt="натуральные ингридиенты">
+							<div class="features__item-pic features__item-pic_natural"></div>
 							<span class="features__item-heading">Натуральные ингридиенты</span>
 							<div class="features__item-text"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti numquam dolor odit nemo ipsa a est amet.</p></div>
 						</li>
