team_section_visual

--- a/index.html
+++ b/index.html
@@ -54,20 +54,7 @@
 				<img src="img/icons/arrow-scroll.svg" alt="стрелка вниз" class="arrow__down">
 			</div>
 		</section>
-		<aside class="navigation__dots">
-			<nav class="nav">
-				<ul class="nav__list">
-					<li class="nav__item nav__item--active"><a href="#" class="nav__item-link"></a></li>
-					<li class="nav__item"><a href="#" class="nav__item-link"></a></li>
-					<li class="nav__item"><a href="#" class="nav__item-link"></a></li>
-					<li class="nav__item"><a href="#" class="nav__item-link"></a></li>
-					<li class="nav__item"><a href="#" class="nav__item-link"></a></li>
-					<li class="nav__item"><a href="#" class="nav__item-link"></a></li>
-					<li class="nav__item"><a href="#" class="nav__item-link"></a></li>
-					<li class="nav__item"><a href="#" class="nav__item-link"></a></li>
-				</ul>
-			</nav>
-		</aside>
+		
 		<section class="we_best__block section">
 			<div class="container">
 				<div class="we_best__block__heading">
@@ -93,6 +80,43 @@
 					</ul>
 				</div>
 			</div>
+		</section>
+		<section class="burgers-info section">
+			<div class="container">
+				
+			</div>
+		</section>
+		<section class="team section">
+			<div class="team-container">
+				<div class="team__block">
+					<div class="team__block__inner">
+						<h2 class="team__block-heading">Команда</h2>
+						<div class="team__block__accordeon">
+							<ul class="team__block__list">
+								<li class="team__block__item">
+									<button class="block__item-btn">Данила Редклиф</button>
+								</li>
+								<li class="team__block__item">
+									<button class="block__item-btn">Ричард Джеймс</button>
+								</li>
+								<li class="team__block__item">
+									<button class="block__item-btn">Чак Норрис</button>
+								</li>
+								<li class="team__block__item">
+									<button class="block__item-btn">Кунг Лао</button>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="menu section">
+			<div class="container container-menu">
+				<div class="menu__block">
+					<h2 class="menu__block-heading">Меню</h2>
+				</div>
+			</div>	
 		</section>
 		<section class="reviews section">
 			
@@ -196,6 +220,20 @@
 				</ul>
 			
 		</section>
+		<aside class="navigation__dots">
+			<nav class="nav">
+				<ul class="nav__list">
+					<li class="nav__item nav__item--active"><a href="#" class="nav__item-link"></a></li>
+					<li class="nav__item"><a href="#" class="nav__item-link"></a></li>
+					<li class="nav__item"><a href="#" class="nav__item-link"></a></li>
+					<li class="nav__item"><a href="#" class="nav__item-link"></a></li>
+					<li class="nav__item"><a href="#" class="nav__item-link"></a></li>
+					<li class="nav__item"><a href="#" class="nav__item-link"></a></li>
+					<li class="nav__item"><a href="#" class="nav__item-link"></a></li>
+					<li class="nav__item"><a href="#" class="nav__item-link"></a></li>
+				</ul>
+			</nav>
+		</aside>
 	</main>
 </body>
 </html>
