adding form block

--- a/index.html
+++ b/index.html
@@ -220,6 +220,83 @@
 				</ul>
 			
 		</section>
+		<section class="order section">
+			<div class="container">
+				<div class="order__heading__block"><h2 class="order__heading">Закажите доставку</h2></div>
+				
+
+				<form class="order__form">
+					
+					<div class="order__form-left">
+						<div class="order__form-left__name">
+							<label>
+								<span class="order__form-text">Имя</span> <br>
+								<input type="text" class="order__form-input">
+							</label>
+						</div>
+						<div class="order__form-left__phone">
+							<label>
+								<span class="order__form-text">Телефон</span> <br> 
+								<input type="text" class="order__form-input">
+							</label>
+						</div>
+						<div class="order__form-left__street">
+							<label>
+								<span class="order__form-text">Улица</span> <br> 
+								<input type="text" class="order__form-input__street">
+							</label>
+						</div>
+						<div class="order__form-left__adress">
+							<label class="adress__item">
+								<span class="order__form-text">Дом</span> <br> 
+								<input type="text" class="order__form-input__small">
+							</label>
+							<label class="adress__item">
+								<span class="order__form-text">Корпус</span> <br> 
+								<input type="text" class="order__form-input__small">
+							</label>
+							<label class="adress__item">
+								<span class="order__form-text">Квартира</span> <br> 
+								<input type="text" class="order__form-input__small">
+							</label>
+							<label class="adress__item">
+								<span class="order__form-text">Этаж</span> <br> 
+								<input type="text" class="order__form-input__small">
+							</label>
+						</div>
+					</div>
+
+					<div class="order__form-right">
+						<div class="order__form-right__comment order__right-item">
+							<label class="adress__item">
+								<span class="order__form-text">Коментарий</span> <br> 
+								<textarea name="" id="" cols="35" rows="4" class="order__form-textarea"></textarea>
+							</label>
+						</div>
+						<div class="order__form-right__radio order__right-item">
+							<label>
+								<input type="radio" name="paymeth"><span class="order__form-text2">Потребуется сдача</span>
+							</label>
+							<label>
+								<input type="radio" name="paymeth"><span class="order__form-text2">Оплата по карте</span>
+							</label>
+						</div>
+						<div class="order__form-right-check order__right-item">
+							<label>
+								<input type="checkbox" checked>
+								<span class="order__form-text">Не перезванивать</span>
+							</label>
+						</div>
+						<div class="order__form-right-btns order__right-item">
+							<button class="order__btn">Заказать</button>
+							<button class="order__btn-clear">Очистить</button>
+						</div>
+	
+					</div>
+				</form>
+
+			</div>
+		</section>
 		<aside class="navigation__dots">
 			<nav class="nav">
 				<ul class="nav__list">
