--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 									<button class="block__item-btn">Чак Норрис</button>
 								</li>
 								<li class="team__block__item">
-									<button class="block__item-btn">Кунг Лао</button>
+									<button class="block__item-btn">Джейсон Стетхем</button>
 								</li>
 							</ul>
 						</div>
@@ -295,6 +295,11 @@
 					</div>
 				</form>
 
+			</div>
+		</section>
+		<section class="map section">
+			<div class="footer">
+				<div class="container"></div>
 			</div>
 		</section>
 		<aside class="navigation__dots">
