--- a/index.html
+++ b/index.html
@@ -95,9 +95,23 @@
 							<ul class="team__block__list">
 								<li class="team__block__item">
 									<button class="block__item-btn">Данила Редклиф</button>
+									<div class="block__item-drop">
+										<div class="block__item-drop-img"></div>
+										<div class="block__item-drop-text">
+											<h4 class="block__item-drop-text__heading">Оператор</h4>
+											<div class="block__item-drop-text__contain">С радостью поможет подобрать идеальный бургер и оформить заказ</div>
+										</div>
+									</div>
 								</li>
 								<li class="team__block__item">
 									<button class="block__item-btn">Ричард Джеймс</button>
+									<div class="block__item-drop">
+										<div class="block__item-drop-img"></div>
+										<div class="block__item-drop-text">
+											<h4 class="block__item-drop-text__heading">Оператор</h4>
+											<div class="block__item-drop-text__contain">С радостью поможет подобрать идеальный бургер и оформить заказ</div>
+										</div>
+									</div>
 								</li>
 								<li class="team__block__item">
 									<button class="block__item-btn">Чак Норрис</button>
