--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 <body>
 	<main class="wrapper">
 		<section class="main__block section">
+			<div class="container">
 			<header class="header">
-				<div class="header__main container">
+				<div class="header__main">
 					<div class="header__main-inner">
 					    <div class="header__logo">
 						    <div class="header__logo-img">
@@ -51,6 +52,7 @@
 			<div class="main__block-arrow">
 				<img src="img/icons/arrow-scroll.svg" alt="стрелка вниз" class="arrow__down">
 			</div>
+		</div>
 		</section>
 		
 		<section class="we_best__block section">
