--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				</div>
 			</header>
 			<div class="main__burger">
-				<div class="main__burger-inner container">
+				<div class="main__burger-inner">
 					
 						<div class="main__burger-block">
 								<img src="img/burger_main.png" alt="главный бургер" class="main__burger-block-pic">
