--- a/index.html
+++ b/index.html
@@ -331,17 +331,21 @@
 						<div class="form__title">Комментарий</div>
 						<textarea class="form__textarea"></textarea>
 					</label>
-					<label class="radio__buttons">
-						<input type="radio" name="r1" class="radio__buttons-input">
-						<div class="form__title">Потребуется сдача</div>
-						
-					</label>
-					<label class="radio__buttons">
-						<input type="radio" name="r1" class="radio__buttons-input">
-						<div class="form__title">Оплата по карте</div>
-					</label>
+					<div class="right-form__radio">
+						<label class="radio__buttons">
+							<input type="radio" name="r1" class="radio__buttons-input">
+							<p class="radio__buttons--style"></p>
+							<div class="form__title">Потребуется сдача</div>
+						</label>
+						<label class="radio__buttons">
+							<input type="radio" name="r1" class="radio__buttons-input">
+							<p class="radio__buttons--style"></p>
+							<div class="form__title">Оплата по карте</div>
+						</label>
+					</div>
 					<label class="form__checkbox">
-						<input type="checkbox" checked>
+						<input class="form__checkbox-basic" type="checkbox" checked>
+						<p class="form__checkbox--style"></p>
 						<div class="checked__title">Не перезванивать</div>
 					</label>
 					<div class="form__buttons">
