--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 		<section class="we_best__block section">
 			<div class="container we_best__container">
 				<div class="we_best__block__heading">
-					<h2 class="section-title title-dark">Мы лучшие</h2>
+					<h2 class="section-title title-dark title-best">Мы лучшие</h2>
 				</div>
 				<div class="we_best__block__features">
 					<ul class="features__list">
@@ -160,6 +160,7 @@
 					<ul class="acco__list">
 						<li class="acco__item acco__item--active" >
 							<a class="acco__item__block" style="background-image: url('./img/menu__sidebar/meat-eat.png')"><div class="acco__item__block-txt">для мясоедов</div></a>
+							
 							<div class="acco__item__content acco__item__content--active">
 								<div class="acco__item__content-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem et qui reiciendis voluptatem dolorem quia itaque, consectetur nam ipsa nulla dolores asperiores architecto natus ducimus quos quo dignissimos ratione nisi!
 								Voluptates vitae illum incidunt debitis iusto perspiciatis impedit voluptas autem beatae molestiae tenetur obcaecati aspernatur repellendus, modi at, velit commodi voluptate sequi! Laudantium quia tempora tempore quasi facilis corporis consectetur.
