--- a/index.html
+++ b/index.html
@@ -32,10 +32,19 @@
 									<li class="header__nav-item nav-item--button"><a href="#" class="header__nav-item-link">Заказать</a></li>
 								</ul>
 							</nav>
+							<div class="hambg__menu">
+								<div class="hambg__menu-block">
+									<div class="hambg__menu-block__inner">
+										<div class="hambg__line"></div>
+										<div class="hambg__line"></div>
+										<div class="hambg__line"></div>
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
 				</header>
-			
+		
 			<div class="main__burger">
 				<div class="main__burger-inner">
 					
@@ -460,6 +469,7 @@
 				</ul>
 			</nav>
 		</aside>
+		
 	</main>
 	
 </body>
