--- a/index.html
+++ b/index.html
@@ -372,90 +372,90 @@
 								<input type="text" class="form__input">
 							</label>
 							<label class="form__block">
-								<div class="form__title" ">Телефон</div>
-							<input type="text " class="form__input " id="form__input-phone ">
+								<div class="form__title">Телефон</div>
+							<input type="text" class="form__input" id="form__input-phone">
 						</label>
 					</div>
-					<div class="form__row ">
-						<label class="form__block ">
-							<div class="form__title ">Улица</div>
-							<input type="text " class="form__input ">
+					<div class="form__row">
+						<label class="form__block">
+							<div class="form__title">Улица</div>
+							<input type="text" class="form__input">
 						</label>
 					</div>
-					<div class="form__row ">
+					<div class="form__row">
 						<label class="form__block ">
-							<div class="form__title ">Дом</div>
-							<input type="text " class="form__input ">
+							<div class="form__title">Дом</div>
+							<input type="text" class="form__input">
 						</label>
-						<label class="form__block ">
-							<div class="form__title ">Корпус</div>
-							<input type="text " class="form__input ">
+						<label class="form__block">
+							<div class="form__title">Корпус</div>
+							<input type="text" class="form__input">
 						</label>
-						<label class="form__block ">
-							<div class="form__title ">Квартира</div>
-							<input type="text " class="form__input ">
+						<label class="form__block">
+							<div class="form__title">Квартира</div>
+							<input type="text" class="form__input">
 						</label>
-						<label class="form__block ">
-							<div class="form__title ">Этаж</div>
-							<input type="text " class="form__input ">
+						<label class="form__block">
+							<div class="form__title">Этаж</div>
+							<input type="text" class="form__input">
 						</label>
 						
 					</div>
 				</div>
-				<div class="right-form "> <!-- #right side -->
+				<div class="right-form"> <!-- #right side -->
 					<label>
-						<div class="form__title ">Комментарий</div>
+						<div class="form__title">Комментарий</div>
 						<textarea class="form__textarea "></textarea>
 					</label>
-					<div class="right-form__radio ">
-						<label class="radio__buttons ">
-							<input type="radio " name="r1 " class="radio__buttons-input ">
-							<p class="radio__buttons--style "></p>
-							<div class="form__title ">Потребуется сдача</div>
+					<div class="right-form__radio">
+						<label class="radio__buttons">
+							<input type="radio" name="r1" class="radio__buttons-input">
+							<p class="radio__buttons--style"></p>
+							<div class="form__title">Потребуется сдача</div>
 						</label>
-						<label class="radio__buttons ">
-							<input type="radio " name="r1 " class="radio__buttons-input ">
-							<p class="radio__buttons--style "></p>
-							<div class="form__title ">Оплата по карте</div>
+						<label class="radio__buttons">
+							<input type="radio" name="r1" class="radio__buttons-input">
+							<p class="radio__buttons--style"></p>
+							<div class="form__title">Оплата по карте</div>
 						</label>
 					</div>
-					<label class="form__checkbox ">
-						<input class="form__checkbox-basic " type="checkbox " checked>
-						<p class="form__checkbox--style "></p>
+					<label class="form__checkbox">
+						<input class="form__checkbox-basic" type="checkbox" checked>
+						<p class="form__checkbox--style"></p>
 						<div class="checked__title ">Не перезванивать</div>
 					</label>
-					<div class="form__buttons ">
-						<button type="submit " href="# " class="form__button-order ">Заказать</button>
-						<button type="reset " href="# " class="form__button-reset ">Очистить</button>
+					<div class="form__buttons">
+						<button type="submit" href="#" class="form__button-order">Заказать</button>
+						<button type="reset" href="#" class="form__button-reset">Очистить</button>
 					</div>
 					
 				</div>
 			</form>
 		  </div>
 		</section>
-		<section class="map section ">
-			<footer class="footer ">
-				<div class="footer__container ">
-					<div class="footer__left ">
-						<div class="footer__left-top ">
+		<section class="map section">
+			<footer class="footer">
+				<div class="footer__container">
+					<div class="footer__left">
+						<div class="footer__left-top">
 							<span>Санкт-Петербург. ул.Бабушкина, д12/1.15</span>
 						</div>
-						<div class="footer__left-bottom ">
-							<div class="footer__left-img "></div>
-							<div class="footer__left-number ">
-								<a href="tel:+79992026782 " class="footer__left-number ">+7(999)202-67-82</a>
+						<div class="footer__left-bottom">
+							<div class="footer__left-img"></div>
+							<div class="footer__left-number">
+								<a href="tel:+79992026782" class="footer__left-number">+7(999)202-67-82</a>
 							</div>
 						</div>
 					</div>
-					<div class="footer__right ">
-						<svg class="icon " width="126px " height="72px " viewBox="0 0 126 72 ">
+					<div class="footer__right">
+						<svg class="icon" width="126px" height="72px" viewBox="0 0 126 72">
 							<g>
 							  <g>
 								<defs>
-								  <rect id="SVGID_1_ " width="126 " height="72 " />
+								  <rect id="SVGID_1_" width="126" height="72" />
 								</defs>
-								<clipPath id="SVGID_2_ ">
-								  <use overflow="visible " xlink:href="#SVGID_1_ " />
+								<clipPath id="SVGID_2_">
+								  <use overflow="visible" xlink:href="#SVGID_1_" />
 								</clipPath>
 								<path d="M124.523,64.503c-0.152-0.328-0.293-0.597-0.426-0.816 c-2.172-3.91-6.324-8.711-12.449-14.401l-0.129-0.134l-0.066-0.063l-0.066-0.066h-0.063c-2.781-2.651-4.543-4.434-5.281-5.344
 								    c-1.348-1.738-1.652-3.5-0.914-5.281c0.523-1.348,2.477-4.19,5.867-8.538c1.781-2.302,3.195-4.149,4.234-5.539 c7.52-9.996,10.777-16.383,9.777-19.164l-0.387-0.649c-0.262-0.39-0.934-0.75-2.02-1.074c-1.086-0.327-2.477-0.383-4.172-0.163
@@ -478,43 +478,43 @@
 							  </g>
 							</g>
 						  </svg>
-						  <svg class="icon " width="37.453px " height="31.21px " viewBox="0 0 37.453 31.21 ">
+						  <svg class="icon" width="37.453px" height="31.21px" viewBox="0 0 37.453 31.21">
 							<path d="M36.421,0.577c-1.486,0.902-3.129,1.558-4.884,1.909C30.14,0.956,28.142,0,25.93,0 c-4.24,0-7.682,3.528-7.682,7.879c0,0.618,0.066,1.217,0.198,1.794C12.061,9.344,6.399,6.211,2.607,1.438
 								    c-0.662,1.168-1.04,2.522-1.04,3.966c0,2.731,1.356,5.144,3.418,6.557c-1.257-0.038-2.444-0.396-3.481-0.981v0.096 c0,3.819,2.648,7.004,6.167,7.725c-0.645,0.186-1.324,0.277-2.025,0.277c-0.495,0-0.979-0.047-1.447-0.139
 								    c0.979,3.129,3.815,5.408,7.179,5.469c-2.63,2.115-5.944,3.375-9.544,3.375c-0.619,0-1.232-0.037-1.833-0.109 c3.4,2.232,7.441,3.537,11.778,3.537c14.136,0,21.863-12.004,21.863-22.417c0-0.343-0.006-0.685-0.021-1.021
 								    c1.502-1.112,2.807-2.498,3.832-4.078c-1.376,0.626-2.857,1.05-4.412,1.24C34.629,3.961,35.847,2.417,36.421,0.577 " />
 						  </svg>
-						  <svg class="icon " width="36.663px " height="36.664px " viewBox="0 0 36.663 36.664 ">
+						  <svg class="icon" width="36.663px" height="36.664px" viewBox="0 0 36.663 36.664">
 							<path d="M32.305,0H4.357C1.95,0,0,1.946,0,4.349v27.967c0,2.4,1.95,4.348,4.357,4.348h27.947 c2.407,0,4.358-1.947,4.358-4.348V4.349C36.663,1.946,34.712,0,32.305,0
 								    M26.352,5.729c0-0.632,0.513-1.146,1.146-1.146h3.438 c0.632,0,1.145,0.514,1.145,1.146v3.438c0,0.633-0.513,1.146-1.145,1.146h-3.438c-0.633,0-1.146-0.513-1.146-1.146V5.729z
 								    M18.374,11.341c3.894,0,7.051,3.149,7.051,7.033c0,3.885-3.157,7.034-7.051,7.034s-7.051-3.148-7.051-7.034 C11.323,14.49,14.48,11.341,18.374,11.341
 								    M33.226,32.08c0,0.633-0.513,1.146-1.146,1.146H4.583c-0.633,0-1.146-0.514-1.146-1.146 V14.895H8.02c-0.597,0.858-0.798,2.462-0.798,3.479c0,6.135,5.003,11.127,11.152,11.127s11.153-4.992,11.153-11.127
 								    c0-1.018-0.145-2.596-0.885-3.479h4.583V32.08z " />
 						  </svg>
-						  <svg class="icon " width="36.711px " height="36.711px " viewBox="0 0 36.711 36.711 ">
+						  <svg class="icon" width="36.711px" height="36.711px" viewBox="0 0 36.711 36.711">
 							<path d="M36.711,34.686c0,1.119-0.907,2.025-2.026,2.025H25.33V22.495h4.771l0.715-5.541H25.33v-3.537 c0-1.604,0.445-2.696,2.746-2.696l2.934-0.001V5.764c-0.508-0.067-2.249-0.219-4.275-0.219c-4.23,0-7.127,2.582-7.127,7.323v4.086
-								    h-4.784v5.541h4.784v14.216H2.026C0.907,36.711,0,35.805,0,34.686V2.026C0,0.907,0.907,0,2.026,0h32.659 c1.119,0,2.026,0.907,2.026,2.026V34.686z " />
+								    h-4.784v5.541h4.784v14.216H2.026C0.907,36.711,0,35.805,0,34.686V2.026C0,0.907,0.907,0,2.026,0h32.659 c1.119,0,2.026,0.907,2.026,2.026V34.686z" />
 						  </svg>
 					</div>
 				</div>
 			</footer>
 		</section>
-		<aside class="navigation__dots ">
-			<nav class="nav ">
-				<ul class="nav__list ">
-					<li class="nav__item nav__item--active "><a href="# " class="nav__item-link "></a></li>
-					<li class="nav__item "><a href="# " class="nav__item-link "></a></li>
-					<li class="nav__item "><a href="# " class="nav__item-link "></a></li>
-					<li class="nav__item "><a href="# " class="nav__item-link "></a></li>
-					<li class="nav__item "><a href="# " class="nav__item-link "></a></li>
-					<li class="nav__item "><a href="# " class="nav__item-link "></a></li>
-					<li class="nav__item "><a href="# " class="nav__item-link "></a></li>
-					<li class="nav__item "><a href="# " class="nav__item-link "></a></li>
+		<aside class="navigation__dots">
+			<nav class="nav">
+				<ul class="nav__list">
+					<li class="nav__item nav__item--active"><a href="# " class="nav__item-link"></a></li>
+					<li class="nav__item "><a href="# " class="nav__item-link"></a></li>
+					<li class="nav__item "><a href="# " class="nav__item-link"></a></li>
+					<li class="nav__item "><a href="# " class="nav__item-link"></a></li>
+					<li class="nav__item "><a href="# " class="nav__item-link"></a></li>
+					<li class="nav__item "><a href="# " class="nav__item-link"></a></li>
+					<li class="nav__item "><a href="# " class="nav__item-link"></a></li>
+					<li class="nav__item "><a href="# " class="nav__item-link"></a></li>
 				</ul>
 			</nav>
 		</aside>
 		
 	</main>
-<script src="./js/style.js "></script>
+<script src="./js/style.js"></script>
 </body>
 </html>
