--- a/index.html
+++ b/index.html
@@ -133,9 +133,27 @@
 				</div>
 			</div>
 		</section>
-		<section class="burgers-info section">
+		<section class="slider__menu section">
 			<div class="container">
-
+				<div class="slider__menu__lh-arrow">‹</div>
+				<div class="slider__menu__block">
+					<div class="slider__burger">
+						<div class="slider__burger-photo">
+							<img src="./img/slider__menu//dark__burger.png" alt="острый бургер с креветками фото" class="slider__burger-photo">
+						</div>
+						<div class="slider__burger-consist">
+						</div>
+						<div class="slider__burger-callories"></div>
+					</div>
+					<div class="slider__text title-white">
+						<h2 class="section-title">Dark Beef Burger</h2>
+						<p class="slider__text-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint laborum, voluptatem numquam facere placeat repellat praesentium cum similique est asperiores ipsum illum harum possimus molestiae quae temporibus eaque quibusdam aspernatur?</p>
+						<div class="slider__text-price"><span class="section-title slider__price">500 <span class="slider__price-small">рублей</span></span>
+							<button type="button" class="slider__text-btn">Заказать</button>
+						</div>
+					</div>
+				</div>
+				<div class="slider__menu__rh-arrow">›</div>
 			</div>
 		</section>
 		<section class="team section">
