--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 			</div>
 		</section>
 		<section class="slider__menu section">
-			<div class="container">
+			<div class="container container--slider">
 				<div class="slider__menu__lh-arrow">‹</div>
 				<div class="slider__menu__block">
 					<div class="slider__burger">
@@ -142,12 +142,13 @@
 							<img src="./img/slider__menu//dark__burger.png" alt="острый бургер с креветками фото" class="slider__burger-photo">
 						</div>
 						<div class="slider__burger-consist">
+							<img class="slider__burger-consist_img" src="./img/slider__menu/consist.svg" alt="иконка состава бургера"><p class="slider__burger-consist_name">Состав</p>
 						</div>
 						<div class="slider__burger-callories"></div>
 					</div>
 					<div class="slider__text title-white">
-						<h2 class="section-title">Dark Beef Burger</h2>
-						<p class="slider__text-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint laborum, voluptatem numquam facere placeat repellat praesentium cum similique est asperiores ipsum illum harum possimus molestiae quae temporibus eaque quibusdam aspernatur?</p>
+						<h2 class="section-title title-slider">Dark Beef Burger</h2>
+						<p class="slider__text-desc">Ваш старый добрый знакомый, с рубленым бифштексом из 100% говядины, тремя кусочками нежнейшего сыра эмменталь, двумя помидорами, луком, салатом и соусом гриль теперь с добавлением экзотического соуса чураско.</p>
 						<div class="slider__text-price"><span class="section-title slider__price">500 <span class="slider__price-small">рублей</span></span>
 							<button type="button" class="slider__text-btn">Заказать</button>
 						</div>
