--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="css/styles.css">
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="shortcut icon" href="img/icons/favicon.png">
+	<link rel="script" href="./js/jquery-3.3.1.min.js">
 </head>
 
 <body>
