--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="css/styles.css">
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="shortcut icon" href="img/icons/favicon.png">
-	<link rel="script" href="./js/jquery-3.3.1.min.js">
+	
 </head>
 
 <body>
@@ -535,6 +535,7 @@
 		</aside>
 		
 	</main>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="./js/style.js"></script>
 </body>
 </html>
