--- a/index.html
+++ b/index.html
@@ -535,7 +535,14 @@
 		</aside>
 		
 	</main>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="./js/style.js"></script>
+<script type="reviews__template" id="overlayReviews">
+	<div class="reviews__overlay-container">
+		<a href="#" class="reviews__overlay-close">x</a>
+		<div class="reviews__overlay-content"></div>
+	</div>
+</script>
+<script src="./js/jquery-3.3.1.min.js"></script>
+<script src="./js/popup-menu.js"></script>
+<script src="./js/reviews-modal.js"></script>
 </body>
 </html>
