--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 										</div>
 									</div>
 								</li>
-								<li class="team__block__item team__block__item--active">
+								<li class="team__block__item">
 									<a class="block__item-btn">Ричард Джеймс</a>
 									<div class="block__item-drop">
 										<div class="block__item-drop-img">
@@ -544,5 +544,7 @@
 <script src="./js/jquery-3.3.1.min.js"></script>
 <script src="./js/popup-menu.js"></script>
 <script src="./js/reviews-modal.js"></script>
+<script src="./js/team-acco.js"></script>
+<script src="./js/menu-acco.js"></script>
 </body>
 </html>
