--- a/index.html
+++ b/index.html
@@ -227,12 +227,12 @@
 			<h2 class="section-title section-title__menu title-white">Меню</h2>
 			<div class="container-menu">
 				<ul class="acco__list">
-					<li class="acco__item acco__item--active">
+					<li class="acco__item">
 						<a class="acco__item__block" style="background-image: url('./img/menu__sidebar/meat-eat.png')">
 							<div class="acco__item__block-txt">для мясоедов</div>
 						</a>
 
-						<div class="acco__item__content acco__item__content--active">
+						<div class="acco__item__content">
 							<div class="acco__item__content-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem et qui reiciendis voluptatem dolorem quia itaque,
 								consectetur nam ipsa nulla dolores asperiores architecto natus ducimus quos quo dignissimos ratione nisi! Voluptates
 								vitae illum incidunt debitis iusto perspiciatis impedit voluptas autem beatae molestiae tenetur obcaecati aspernatur
@@ -256,7 +256,7 @@
 					</li>
 					<li class="acco__item">
 						<a class="acco__item__block" style="background-image: url('./img/menu__sidebar/diet.png')">
-							<div class="acco__item__block-txt">для мясоедов</div>
+							<div class="acco__item__block-txt">диетическое</div>
 						</a>
 						<div class="acco__item__content">
 							<div class="acco__item__content-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem et qui reiciendis voluptatem dolorem quia itaque,
