--- a/app/index.html
+++ b/app/index.html
@@ -10,13 +10,12 @@
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="shortcut icon" href="img/icons/favicon.png">
 	<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
-
 </head>
 
 <body>
-	<div class="wrapper">
+	<!-- <div class="wrapper"> -->
 	  <div class="maincont">
-		<section class="main__block section">
+		<section class="main__block section is-active">
 			<div class="container main-sec__container">
 				<header class="header">
 					<div class="header__main">
@@ -29,25 +28,25 @@
 							<nav class="header__nav">
 								<ul class="header__nav-list">
 									<li class="header__nav-item">
-										<a href="#about_us" class="header__nav-item-link">О нас</a>
+										<a href="" data-scroll-to="1" class="header__nav-item-link">О нас</a>
 									</li>
 									<li class="header__nav-item">
-										<a href="#burgers_slider" class="header__nav-item-link">Бургеры</a>
+										<a href="" data-scroll-to="2" class="header__nav-item-link">Бургеры</a>
 									</li>
 									<li class="header__nav-item">
-										<a href="#our_team" class="header__nav-item-link">Команда</a>
+										<a href="" data-scroll-to="3" class="header__nav-item-link">Команда</a>
 									</li>
 									<li class="header__nav-item">
-										<a href="#menu_types" class="header__nav-item-link">Меню</a>
+										<a href="" data-scroll-to="4" class="header__nav-item-link">Меню</a>
 									</li>
 									<li class="header__nav-item">
-										<a href="#reviews" class="header__nav-item-link">Отзывы</a>
+										<a href="" data-scroll-to="5" class="header__nav-item-link">Отзывы</a>
 									</li>
 									<li class="header__nav-item">
-										<a href="#on_map" class="header__nav-item-link">На карте</a>
+										<a href="" data-scroll-to="6" class="header__nav-item-link">На карте</a>
 									</li>
 									<li class="header__nav-item nav-item--button">
-										<a href="#order" class="header__nav-item-link">Заказать</a>
+										<a href="" class="header__nav-item-link">Заказать</a>
 									</li>
 								</ul>
 							</nav>
@@ -84,7 +83,7 @@
 					<img src="img/icons/arrow-scroll.svg" alt="стрелка вниз" class="arrow__down">
 				</div>
 			</div>
-			<div class="menu__popup section">
+			<div class="menu__popup">
 				<div class="menu__popup-inner">
 					<div class="header__logo-img menu__popup-logo">
 						<img src="img/icons/logo.svg" alt="логотип компании Mr.Burger">
@@ -820,7 +819,7 @@
 			</nav>
 		</aside>
       </div>
-	</div>
+	<!-- </div> -->
 
 
 	<script type="reviews__template" id="overlayReviews">
