--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-	<!-- <div class="wrapper"> -->
+	<div class="wrapper">
 	  <div class="maincont">
 		<section class="main__block section is-active">
 			<div class="container main-sec__container">
@@ -819,7 +819,7 @@
 			</nav>
 		</aside>
       </div>
-	<!-- </div> -->
+	</div>
 
 
 	<script type="reviews__template" id="overlayReviews">
